# vault-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
vault_mcp/: chunker.py  embeddings.py  extractor.py  indexer.py  server.py  store.py  watcher.py  webhooks.py
